Get wikipedia stream in background

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="hello">hi world</string>
-    <string name="app_name">test</string>
+    <string name="app_name">wiki talk</string>
 <string name="again">Again</string>
 <string name="red">red</string>
 
 <string name="white">#FF00FF</string>
+<string name="getwikipedia">Get from wikipedia</string>
 </resources>
