--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,4 +9,5 @@
 <string name="getwikipedia">récupérer de wikipedia</string>
 <string name="readit">Lire!</string>
 <string name="stopread">Arrêter</string>
+<string name="title">Albert Einstein</string>
 </resources>
