--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,8 +6,10 @@
 <string name="red">red</string>
 
 <string name="white">#FF00FF</string>
-<string name="getwikipedia">récupérer de wikipedia</string>
+<string name="getwikipedia">wikipedia</string>
 <string name="readit">Lire!</string>
 <string name="stopread">Arrêter</string>
 <string name="title">Albert Einstein</string>
+<string name="imgleft">&lt;</string>
+<string name="imgright">&gt;</string>
 </resources>
