french recognition first letter upper case...

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,7 +9,7 @@
 <string name="getwikipedia">wikipedia</string>
 <string name="readit">Lire!</string>
 <string name="stopread">Arrêter</string>
-<string name="title">Albert Einstein</string>
+<string name="title">Rechercher</string>
 <string name="imgleft">&lt;</string>
 <string name="imgright">&gt;</string>
 <string name="search_hint">Rechercher</string>
