--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -14,4 +14,5 @@
 <string name="imgright">&gt;</string>
 <string name="search_hint">Rechercher</string>
 <string name="search">Rechercher</string>
+<string name="search_voice">Recherche vocale</string>
 </resources>
