--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -6,4 +6,5 @@
 	<string name="search">Rechercher</string>
 	<string name="search_voice">Recherche vocale</string>
 	<string name="voice_prompt">Demander à Dany</string>	
+	<string name="language">Langue</string>
 </resources>
