--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,4 +6,5 @@
 	<string name="search">Search</string>
 	<string name="search_voice">Voice search</string>
 	<string name="voice_prompt">Ask to Dany</string>	
+	<string name="language">Language</string>
 </resources>
