language not available toast

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,4 +7,5 @@
 	<string name="search_voice">Voice search</string>
 	<string name="voice_prompt">Ask to Dany</string>	
 	<string name="language">Language</string>
+	<string name="language_not_available">Language is not available</string>
 </resources>
